tests/invalid/invalid_uint8_inst.err_exp
invalid_uint8_inst.m:015: In clause for `main(di, uo)':
invalid_uint8_inst.m:015:   in argument 1 of call to function
invalid_uint8_inst.m:015:   `invalid_uint8_inst.foo'/1:
invalid_uint8_inst.m:015:   mode error: variable `N' has instantiatedness
invalid_uint8_inst.m:015:   `unique(7u8)',
invalid_uint8_inst.m:015:   expected instantiatedness was
invalid_uint8_inst.m:015:   `bound(2u8 ; 4u8 ; 6u8)'.
For more information, recompile with `-E'.
